@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<metadata>
+  <description>Description from metadata</description>
+</metadata>
