@@ -826,3 +826,22 @@ def _computeTopologicalSort( steps ):
         unresolved = []
     
     return result
+
+def _getProductPath(product_name):
+
+    """ Return the absolute path of the product's directory.
+    """
+    try:
+        # BBB: for GenericSetup 1.1 style product names
+        product = __import__('Products.%s' % product_name
+                            , globals(), {}, ['initialize'])
+    except ImportError:
+        try:
+            product = __import__(product_name
+                                , globals(), {}, ['initialize'])
+        except ImportError:
+            raise ValueError('Not a valid product name: %s'
+                             % product_name)
+
+    return product.__path__[0]
+
